tests/errors/module_open_not_found_err/module_open_not_found_err.c
#error module_open_not_found_err:1:1 Module not found: module_open_not_found_err.NotExistingModule
